foundations/flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;

  display: flex;
  flex-flow: column wrap;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;

  display: flex;
  flex-flow: row wrap;
  align-items: center;

  font-size: 32px;
  font-weight: 900;
  padding: 16px;
}

.content{
  display: flex;
  flex: auto;
}

.card-container{
  display: flex;
  flex-flow: row wrap;
  padding: 48px;
}

.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;

  display: flex;
  justify-content: center;
  align-items: center;
}

.sidebar {
  width: 300px;
  background: royalblue;
  box-sizing: border-box;

  display: flex;
  flex: 1 0 auto;
  padding: 16px;
}

.sidebar ul li a,
.sidebar ul li,
.sidebar ul{
  color: white;
  text-decoration: none;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;

  width: 300px;
  height: 300px;
  padding: 16px;
}

